salesforce/salesforce/main/default/objects/Challenge__c/fields/Created_By__c.field-meta.xml
<CustomField>
    <fullName>Created_By__c</fullName>
    <label>Created By Player</label>
    <referenceTo>Player__c</referenceTo>
    <relationshipLabel>Challenges Created</relationshipLabel>
    <relationshipName>Challenges_Created</relationshipName>
    <type>Lookup</type>
</CustomField>